Wed Apr 28 08:26:21 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PortableServer/BD_String_SArgument_T.cpp:
        * tao/BD_String_Argument_T.cpp:
          Layout changes

        * tao/UB_String_Argument_T.cpp:
          Use different traits

Wed Apr 28 07:05:16 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/Makefile.am:
          Updated for recent changes from Jeff

Wed Apr 28 01:51:18 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_interface/ami_interface_ch.cpp:
        * TAO_IDL/be/be_visitor_operation/ami_handler_reply_stub_operation_ch.cpp:
        * TAO_IDL/be/be_visitor_operation/ami_ch.cpp:
        * TAO_IDL/be/be_visitor_operation/ami_exception_holder_operation_cs.cpp:
        * TAO_IDL/be/be_visitor_valuetype/ami_exception_holder_cs.cpp:
        * TAO_IDL/be/be_visitor_valuetype/ami_exception_holder_ch.cpp:
        * TAO_IDL/be/be_operation_strategy.cpp:
        * TAO_IDL/be/be_interface_strategy.cpp:
        * TAO_IDL/be_include/be_visitor_interface/ami_interface_ch.h:
        * TAO_IDL/be_include/be_visitor_operation/ami_handler_reply_stub_operation_ch.h:
        * TAO_IDL/be_include/be_visitor_operation/ami_ch.h:
        * TAO_IDL/be_include/be_visitor_operation/ami_exception_holder_operation_cs.h:
        * TAO_IDL/be_include/be_operation_strategy.h:
        * TAO_IDL/be_include/be_interface_strategy.h:
        * TAO_IDL/be_include/be_visitor_valuetype/ami_exception_holder_ch.h:
        * TAO_IDL/be_include/be_visitor_valuetype/ami_exception_holder_cs.h:

          Removed these files, containing AMI-related visitors plus
          the classes be_operation_strategy and be_interface_strategy.

        * TAO_IDL/be/be_attribute.cpp:
        * TAO_IDL/be/be_valuetype.cpp:
        * TAO_IDL/be/be_visitor_interface/interface.cpp:
        * TAO_IDL/be/be_visitor_operation/operation_ch.cpp:
        * TAO_IDL/be/be_visitor_operation/upcall_command_ss.cpp: