@@ -1,3 +1,8 @@
+Wed Apr 28 11:54:53 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tao/UB_String_Argument_T.cpp:
+          Fixed compile errors
+
 Wed Apr 28 08:26:21 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tao/PortableServer/BD_String_SArgument_T.cpp:
